--- a/VA_ADRS/app/src/main/res/layout/fragment_home.xml
+++ b/VA_ADRS/app/src/main/res/layout/fragment_home.xml
@@ -106,31 +106,47 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentStart="true"
                                     android:layout_centerInParent="true"
-                                    android:orientation="vertical"
+                                    android:orientation="horizontal"
+                                    android:gravity="center_vertical"
                                     android:padding="10dp">
 
-                                    <TextView
-                                        android:id="@+id/frg_home_txv_next"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:gravity="center"
+
+                                    <ast.adrs.farmer.Utils.CircleImageView
+                                        android:id="@+id/frg_complete_profile_imv_profile"
+                                        android:layout_width="50dp"
+                                        android:layout_height="50dp"
+                                        android:src="@drawable/ic_user_placeholder" />
+
+
+                                    <LinearLayout
                                         android:paddingStart="5dp"
-                                        android:paddingEnd="5dp"
-                                        android:text="Usama"
-                                        android:textColor="@color/blue"
-                                        android:textSize="@dimen/fontsize_mini" />
-
-                                    <TextView
-                                        android:id="@+id/frg_home_txv_address"
+                                        android:orientation="vertical"
                                         android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:gravity="start"
+                                        android:layout_height="wrap_content">
+                                        <TextView
+                                            android:id="@+id/frg_home_txv_next"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:gravity="center"
+                                            android:paddingStart="5dp"
+                                            android:paddingEnd="5dp"
+                                            android:text="Usama"
+                                            android:textColor="@color/blue"
+                                            android:textSize="@dimen/fontsize_mini" />
 
-                                        android:paddingStart="5dp"
+                                        <TextView
+                                            android:id="@+id/frg_home_txv_address"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:gravity="start"
+
+                                            android:paddingStart="5dp"
 
 
-                                        android:textColor="@color/black"
-                                        android:textSize="@dimen/fontsize_tiny" />
+                                            android:textColor="@color/black"
+                                            android:textSize="@dimen/fontsize_tiny" />
+                                    </LinearLayout>
+
 
                                 </LinearLayout>
 
